# Tools

Cloud/AWS/: Solution Architect Notes.md
Dev/Ass_x86_64/: Sys_calls.txt  whoyou.asm
Dev/BlockChain/Solana/: ReadMe.md
Dev/BlockChain/Solana/localStudentIntro/: Cargo.toml
Dev/BlockChain/Solana/localStudentIntro/client/: client.ts  package.json  readme.md
Dev/BlockChain/Solidity/: ReadMe.md
Dev/C/Lib/: ft_atoi.c.md  ft_print_memory.c.md  ft_putchar.c.md  ft_putnbr.c.md  ft_putstr.c.md  ft_range.c.md  ft_rev_int_tab.c.md  ft_sort_int_tab.c.md  ft_split.c.md  ft_strcapitalize.c.md  ft_strcat.c.md  ft_strcmp.c.md  ft_strcpy.c.md  ft_strdup.c.md  ft_strjoin.c.md  ft_strlcat.c.md  ft_strlen.c.md  ft_strncat.c.md  ft_strncmp.c.md  ft_strncpy.c.md  ft_strstr.c.md  krislib.h
Dev/C/PageRank/: pagerank.c
Dev/JavaScript-TypeScript/: blockchainScanner.js  clientForSolana.js
Dev/Python/: charsheetAPItbc.py
Dev/Rust/: ReadMe.md
Dev/Rust/oneMonthPrep/: day1-plusMinus.rs  day10-twoArrays.rs  day11-chocolateBar.rs  day12-sockMerchant.rs  day2-miniMaxSum.rs  day3-matchingStrings.rs  (+6 more)
Obsidian/: THE LIST.md  dailyTemplate.md
Sec/Bash/: DFIRList.txt  report.sh  tochew.txt
Sec/Blockchain/: fsd.md
Sec/PowerShell/: products.ps1  running_services.ps1  succesful_logons.ps1  tcp_connections.ps1  tochew.txt  user_list.ps1
Sec/Python_tools/: arper.py  bruter.py  decoder.py  mail_sniffer.py  netcat.py  proxy.py  recapper.py  rforward.py  scanner.py  server.py  sniffer.py  sniffer_with_icmp.py  ssh_cmd.py  ssh_rcmd.py  ssh_server.py  tcp_client.py  udp_client.py
(+58 files in other folders)
