[package]
name = "solana-student-intro-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.14.19"
borsh = "0.9.3"
thiserror = "1.0.31"
borsh-derive = "0.9.3"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
